# Foldpro

./: .gitignore  Helpers.py  README.md  code_files_organizer.py  finsihZ_later_code.py  main.py  major_functions.py  new_major_functions  photo_organizer.py  pyproject.toml  setup.py  test_set_up_workspace.py  useful_functions.py  validates_and_setups.py  verifies_access.py  verifies_access1.py
Foldpro/: FoldproHelpers.py  Foldpro_command.py  foldproHelpers.py  foldproMainFunctionality.py  main.py  overallFlow.py  overall_flow.py  preflightOperations.py  preflight_operations.py
mycode(stage THIS)/: Foldpro.py  FoldproHelpers.py  Helpers.py  TODO's.py  cleanup.py  get_good_path.py  main.py  major_functions.py  preflight_operations.py  requirments.txt  setup.py  test_code_files_mode.py  test_organize.py  test_prompt_till_good_path.py
mycode(stage THIS)/Tests/: test_categorizes_files_and_symlinks.py  test_categorizes_symlinks_and_files.py  test_decorator.py  test_everythign_mode.py  test_is_download_from_terminal.py  test_makes_folders.py  test_set_up_workspace.py
