[build-system]
requires = ["flit_core >= 3.12.0, <4"]
build-backend = "flit_core.buildapi"


[project]
name = "Foldpro"
version = "1.0.0"
description = "A program to make organized copies of your folders.\nCopies can be organized into Code Files, Downloads From Terminal, Pictures and Others or all thereof. "
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["rich>=14.2.0"]
keywords = ["folders", "organization", "macOS"]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: MacOS",
]

[project.scripts]
Foldpro = "Foldpro.main:main"


